--- a/style.css
+++ b/style.css
@@ -14,12 +14,14 @@
     position: absolute;
     top: 8px;
     left: 16px;
+    margin-bottom:-4;
 }
   
 .top-right {
     position: absolute;
     top: 8px;
     right: 16px;
+    margin-bottom:-4;
 }
 
 .centered {
@@ -49,6 +51,7 @@
     z-index: 1;
     font-size: 10px;
     margin-top: 10px;
+    
     /* padding: 20px; */
 }
 
