--- a/style.css
+++ b/style.css
@@ -7,21 +7,21 @@
 .header img{
     height: 700px;
     width: 100%;
-    margin-bottom:-4;
+    margin-bottom:-4px;
    
 }
 .top-left {
     position: absolute;
     top: 8px;
     left: 16px;
-    margin-bottom:-4;
+    
 }
   
 .top-right {
     position: absolute;
     top: 8px;
     right: 16px;
-    margin-bottom:-4;
+
 }
 
 .centered {
@@ -43,7 +43,10 @@
  .centered  i{
                margin-left: 250px;
                
- }  
+ } 
+ .picture img{
+    margin-bottom: -4px;
+ } 
 
 .top-left img{
     width: 120px;
